cmake_minimum_required( VERSION 3.3 )

if (ENABLE_MATLAB)
message("ENABLE_MATLAB=TRUE => performing embedded build")
  set(mhdc_SOURCE_DIR "${hdc_SOURCE_DIR}")
  set(mhdc_BINARY_DIR "${hdc_BINARY_DIR}/matlab")
else()
  project(mhdc VERSION 0.21.0)
  message("ENABLE_MATLAB=FALSE => performing standalone build")
  find_package( PkgConfig )
  pkg_check_modules( HDC hdc=0.21.0 REQUIRED )
endif(ENABLE_MATLAB)

find_package(Matlab)
matlab_add_mex(NAME hdc_mex SRC hdc_mex.cpp)
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/test_matlab.m" "${CMAKE_CURRENT_SOURCE_DIR}/HDC.m" DESTINATION "${mhdc_BINARY_DIR}")

if ( ENABLE_MATLAB )
  target_link_libraries(hdc_mex hdc)
else()
  target_include_directories(hdc_mex PUBLIC ${HDC_INCLUDE_DIRS})
  target_link_directories( hdc_mex PUBLIC ${HDC_LIBRARY_DIRS} )
  target_link_libraries(hdc_mex ${HDC_LIBRARIES})
endif( ENABLE_MATLAB )
