set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_Fortran_MODULE_DIRECTORY "${hdc_BINARY_DIR}/mod")
link_directories(${hdc_SOURCE_DIR}/src)
set(HDC_SOURCES)
list(APPEND HDC_SOURCES hdc.cpp plugins/storage_interface.cpp hdc_utils.cpp hdc_json.cpp hdc_uda.cpp hdc_errors.cpp hdc_hdf5.cpp)
set(HDC_LINK_LIBRARIES)
list(APPEND HDC_LINK_LIBRARIES ${Boost_LIBRARIES} Pluma dl jsoncpp)
if(HDF5_FOUND)
    list(APPEND HDC_LINK_LIBRARIES ${HDF5_HL_LIBRARIES} ${HDF5_LIBRARIES}) 
endif(HDF5_FOUND)
add_library(hdc SHARED ${HDC_SOURCES})
if(ENABLE_UDA)
    include_directories(${UDA_INCLUDE_DIRS})
    target_link_libraries(hdc PRIVATE ${UDA_LIBRARIES})
endif(ENABLE_UDA)
target_link_libraries(hdc PUBLIC ${HDC_LINK_LIBRARIES})

add_library(chdc SHARED hdc_c.cpp)
target_link_libraries(chdc hdc stdc++)

add_library(fhdc SHARED hdc_fortran.f90)
target_link_libraries(fhdc chdc)

install(TARGETS hdc chdc fhdc RUNTIME DESTINATION bin LIBRARY DESTINATION lib)
install(DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION include/hdc)

add_subdirectory(plugins)
