if (_BUILD_MDBM)
    add_library(hdc_plugin_mdbm SHARED mdbm_plugin.cpp storage_interface.cpp)
    target_include_directories(hdc_plugin_mdbm PRIVATE ${MDBM_INCLUDE_DIR})
    target_link_libraries(hdc_plugin_mdbm ${MDBM_LIBRARY} Pluma dl ${Boost_LIBRARIES})
    install(TARGETS hdc_plugin_mdbm DESTINATION lib/hdc)
endif()
# Create Unordered map storage
include_directories()
add_library(hdc_plugin_umap SHARED umap_plugin.cpp storage_interface.cpp)
target_link_libraries(hdc_plugin_umap Pluma dl)
install(TARGETS hdc_plugin_umap DESTINATION lib/hdc)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/hdc/plugins FILES_MATCHING PATTERN "*.h*")
